--- a/package.json
+++ b/package.json
@@ -6,15 +6,28 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "import-data": "node scripts/importSanityData.mjs"
   },
   "dependencies": {
+    "@clerk/nextjs": "^5.2.4",
+    "@sanity/client": "^6.27.2",
+    "@sanity/image-url": "^1.1.0",
+    "@sanity/vision": "^3.74.1",
+    "@stripe/react-stripe-js": "^3.1.1",
+    "@stripe/stripe-js": "^5.6.0",
+    "axios": "^1.7.9",
+    "dotenv": "^16.4.7",
     "next": "14.2.15",
+    "next-sanity": "^9.8.51",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.4.0",
     "react-slick": "^0.30.2",
+    "sanity": "^3.74.1",
     "slick-carousel": "^1.8.1",
+    "stripe": "^17.6.0",
+    "styled-components": "^6.1.15",
     "swiper": "^11.1.15"
   },
   "devDependencies": {
